--- a/public/css/catalog.css
+++ b/public/css/catalog.css
@@ -50,6 +50,7 @@
     font-family: Inter;
     font-size: 16px;
     line-height: 150%;
+    white-space: pre-wrap;
 }
 .card_line {
     margin-top: 20px;
@@ -121,12 +122,6 @@
 @media (max-width:1025px) {
     .catalog {
         grid-template-columns: 1fr 1fr;
-    }
-    .card_noshadow:nth-child(3n) {
-        display: none;
-    }
-    .card:nth-child(3n) {
-        display: none;
     }
 }
 @media (max-width:600px) {
