--- a/public/css/page_header.css
+++ b/public/css/page_header.css
@@ -39,6 +39,9 @@
 #page_header_products {
     background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/products.jpg);
 }
+#page_header_gallery {
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../images/gallery.jpg);
+}
 .page_header_block {
     max-width: 50%;
 }
