--- a/public/css/style.css
+++ b/public/css/style.css
@@ -119,7 +119,7 @@ header {
 .header_menu_buttons {
     display: grid;
     column-gap: 30px;
-    grid-template-columns: repeat(10, auto);
+    grid-template-columns: repeat(11, auto);
     margin: 0 auto;
 }
 .header_button {
@@ -190,6 +190,9 @@ footer {
 }
 
 @media (max-width:1281px) {
+    .header_menu_buttons {
+        grid-template-columns: repeat(7, auto);
+    }
     .container {
         width: 1000px;
     }
@@ -205,7 +208,7 @@ footer {
         flex-wrap: wrap;
     }
     .header_menu_buttons {
-        grid-template-columns: repeat(5, auto);
+        grid-template-columns: repeat(6, auto);
     }
     .sticky {
         width: 100%;
@@ -228,32 +231,12 @@ footer {
         column-gap: 20px;
         row-gap: 20px;
     }
-    .sticky {
-        width: 100%;
-    }
-}
-@media (max-width:600px) {
-    .container {
-        width: calc(100% - 10px);
-    }
-    .free_call {
-        display: none;
-    }
-    .socials_group {
-        display: none;
-    }
-    .phone_group {
-        display: none;
-    }
-    .header_menu_buttons {
-        grid-template-columns: repeat(2, auto);
-    }
     header .burger_box {
         display: block;
     }
     header .header_menu_buttons {
         position: fixed;
-        top: 65px;
+        top: 116px;
         right: 0;
         bottom: 0;
         left: 0;
@@ -275,6 +258,29 @@ footer {
     }
     .header_button {
         font-weight: 600;
+    }
+    .header_menu_buttons {
+        grid-template-columns: repeat(3, auto);
+    }
+}
+@media (max-width:600px) {
+    .container {
+        width: calc(100% - 10px);
+    }
+    header .header_menu_buttons {
+        top: 65px;
+    }
+    .free_call {
+        display: none;
+    }
+    .socials_group {
+        display: none;
+    }
+    .phone_group {
+        display: none;
+    }
+    .header_menu_buttons {
+        grid-template-columns: repeat(2, auto);
     }
     .contacts_info > div {
         display: flex;
